--- a/Android/Sample/build.gradle
+++ b/Android/Sample/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'net.wequick.tools.build:gradle-small:1.2.0-alpha5'
+        classpath 'com.growingio.android:vds-gradle-plugin:0.9.105'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,6 +29,7 @@ apply plugin: 'net.wequick.small'
 
 small {
     buildToAssets = false
+    strictSplitResources = false
     android {
         compileSdkVersion = 25
         buildToolsVersion = "25.0.2"
